fixed flex wrapping of cards. need to add screen size adjustments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,12 +59,12 @@ a:visited {
 
 body {
     background-color: #94B6AB;
+    color: #3E4350;
+    line-height: 1.5;
 }
 
 main {
     display: flex;
-    color: #3E4350;
-    line-height: 1.5;
 }
 
 main h3, p {
@@ -76,7 +76,6 @@ main h3, p {
     background-color: #763E83;
     color: #ECEECA;
     margin: 0 20px 0 0;
-    /* padding: 24px; */
     padding: 4%;
 }
 
@@ -84,7 +83,8 @@ main h3, p {
     margin: 8px;
     padding-left: 20px;
 }
-
+/* main-page wrap means the aside will wrap when screen shrinks
+@media screen has flex-direction: reverse-column */
 .main-page {
     flex: 80%;
     padding: 4%;
@@ -103,10 +103,6 @@ main h3, p {
     height: 400px;
 }
 
-.first-card img {
-    object-position: top;
-}
-
 #portfolio img {
     background-color: #B35072;
     border-radius: 16px;
@@ -114,6 +110,7 @@ main h3, p {
     height: 100%;
     width: 100%;
     position: relative;
+    object-position: top;
 }
 
 #portfolio div:hover {
@@ -134,13 +131,15 @@ main h3, p {
     }
 }
 
+.card-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .card {
     height: 400px;
-    width: 300px;
-    /* width: 30%; */
-    /* display: flex; */
-    flex-direction: row; */
-    flex-wrap: wrap;
+    width: 31%;
     object-position: top;
 }
 
